Test/hofs/LambdaParsefail.dfy.expect
LambdaParsefail.dfy(5,17): error: Invalid variable binding in lambda.
LambdaParsefail.dfy(6,16): error: Expected variable binding.
LambdaParsefail.dfy(7,16): error: Expected variable binding.
LambdaParsefail.dfy(12,17): error: semi expected
4 parse errors detected in LambdaParsefail.dfy
